--- a/style.css
+++ b/style.css
@@ -1,72 +1,153 @@
 html, body {
-  font-size: 18px;
+  font-size: 20px;
+  font-weight: normal;
+  line-height: 1.3em;
+  color: black; }
+
+h1, h2, h3, h4 {
+  font-weight: normal;
+  line-height: 1.3em;
+  margin: 0; }
+
+h1 {
+  font-size: 49px; }
+
+h2 {
+  font-size: 35px; }
+
+h3 {
+  font-size: 20px; }
+
+h4 {
+  font-size: 15px; }
+
+a {
+  text-decoration: none;
+  background-image: -webkit-linear-gradient(top, transparent 50%, rgba(0, 0, 0, 0.6) 50%);
+  background-image: -o-linear-gradient(top, transparent 50%, rgba(0, 0, 0, 0.6) 50%);
+  background-image: linear-gradient(to bottom, transparent 50%, rgba(0, 0, 0, 0.6) 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 2px;
+  background-position: 0 1.3em;
+  line-height: 1.4em;
   font-weight: normal; }
-  html #intro, body #intro {
-    width: 100%;
-    min-height: 100vh; }
-    html #intro p, body #intro p {
-      margin: 0; }
-  html .row, body .row {
-    width: 100%;
-    margin: auto; }
-  html header, body header {
-    width: 100%;
-    padding: 40px 0;
-    background: white;
-    z-index: 100;
-    position: relative;
-    z-index: 100; }
-    html header .container-fluid, body header .container-fluid {
-      padding: 0; }
-    html header .col-logo, body header .col-logo {
-      width: 100%; }
-      html header .col-logo svg, body header .col-logo svg {
-        width: 100%;
-        height: auto;
-        overflow: visible !important; }
-      @media (max-width: 576px) {
-        html header .col-logo, body header .col-logo {
-          width: 100% !important; } }
-    html header .col-nav, body header .col-nav {
-      display: none !important; }
-      @media (max-width: 576px) {
-        html header .col-nav, body header .col-nav {
-          display: -webkit-box !important;
-          display: flex !important; } }
-      html header .col-nav nav, body header .col-nav nav {
-        height: 100%; }
-        html header .col-nav nav .col-md, body header .col-nav nav .col-md {
-          text-align: center;
-          padding-right: 0; }
-          html header .col-nav nav .col-md:first-child, body header .col-nav nav .col-md:first-child {
-            padding-left: 0; }
-    html header.aligned .col-lg, body header.aligned .col-lg {
-      margin: 0; }
-    html header.fixed, body header.fixed {
-      position: fixed;
-      left: 0;
-      top: 0; }
-      html header.fixed .col-nav, body header.fixed .col-nav {
-        display: block !important; }
-  html main, body main {
-    width: 100%;
-    height: 100vh; }
-    html main .row .col, body main .row .col {
-      padding-top: 40px; }
-      html main .row .col.left, body main .row .col.left {
-        background: #015fff; }
-      html main .row .col.right, body main .row .col.right {
-        background: #ddf6f0; }
-      html main .row .col.links .container, body main .row .col.links .container {
+  a:hover {
+    text-decoration: none; }
+
+p {
+  margin: 0 0 50px 0; }
+  p:last-of-type {
+    margin: 0; }
+
+.white {
+  color: white; }
+
+.black {
+  color: black; }
+
+#intro {
+  width: 100%;
+  min-height: 100vh; }
+  #intro p {
+    margin: 0; }
+
+.row {
+  width: 100%;
+  margin: auto; }
+
+header {
+  width: 100%;
+  padding: 40px 0;
+  background: white;
+  z-index: 100;
+  position: relative;
+  z-index: 100; }
+  header .container-fluid {
+    padding: 0; }
+  header .col-logo {
+    width: 100%; }
+    header .col-logo svg {
+      width: 100%;
+      height: auto;
+      overflow: visible !important; }
+    @media (max-width: 576px) {
+      header .col-logo {
+        width: 100% !important; } }
+  header .col-nav {
+    display: none !important; }
+    @media (max-width: 576px) {
+      header .col-nav {
+        display: -webkit-box !important;
+        display: flex !important; } }
+    header .col-nav nav {
+      height: 100%; }
+      header .col-nav nav .col-md {
+        text-align: center;
+        padding-right: 0; }
+        header .col-nav nav .col-md:first-child {
+          padding-left: 0; }
+  header.aligned .col-lg {
+    margin: 0; }
+  header.fixed {
+    position: fixed;
+    left: 0;
+    top: 0; }
+    header.fixed .col-nav {
+      display: block !important; }
+
+main {
+  width: 100%; }
+  main .row .col {
+    padding: 0; }
+    main .row .col .inner_content {
+      padding: 100px 85px; }
+    main .row .col p:nth-child(3n+1) a {
+      background-image: -webkit-linear-gradient(top, #015fff 50%, #015fff 50%);
+      background-image: -o-linear-gradient(top, #015fff 50%, #015fff 50%);
+      background-image: linear-gradient(to bottom, #015fff 50%, #015fff 50%); }
+      main .row .col p:nth-child(3n+1) a:hover {
+        color: #015fff; }
+    main .row .col p:nth-child(3n+2) a {
+      background-image: -webkit-linear-gradient(top, #fa453c 50%, #fa453c 50%);
+      background-image: -o-linear-gradient(top, #fa453c 50%, #fa453c 50%);
+      background-image: linear-gradient(to bottom, #fa453c 50%, #fa453c 50%); }
+      main .row .col p:nth-child(3n+2) a:hover {
+        color: #fa453c; }
+    main .row .col p:nth-child(3n+3) a {
+      background-image: -webkit-linear-gradient(top, #23cc0e 50%, #23cc0e 50%);
+      background-image: -o-linear-gradient(top, #23cc0e 50%, #23cc0e 50%);
+      background-image: linear-gradient(to bottom, #23cc0e 50%, #23cc0e 50%); }
+      main .row .col p:nth-child(3n+3) a:hover {
+        color: #23cc0e; }
+    main .row .col.left {
+      background: #e2edff; }
+      main .row .col.left .container {
         width: auto;
         display: table; }
-      html main .row .col.links strong, body main .row .col.links strong {
+      main .row .col.left strong {
         text-transform: uppercase;
         color: black;
-        font-size: 10px; }
-      html main .row .col.links a, body main .row .col.links a {
+        font-size: 15px; }
+      main .row .col.left a {
         display: inline-block;
-        color: white;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-        margin-bottom: 15px;
-        font-weight: lighter; }
+        color: black; }
+    main .row .col.right {
+      background: #015fff;
+      color: white; }
+      main .row .col.right h2 {
+        margin-bottom: 15px; }
+      main .row .col.right h3 {
+        margin-bottom: 10px; }
+      main .row .col.right h4:nth-of-type(2) {
+        margin-top: 10px; }
+      main .row .col.right .row {
+        margin-bottom: 50px; }
+      main .row .col.right .cell {
+        margin-bottom: 50px; }
+        main .row .col.right .cell .soon::after {
+          content: '*';
+          color: #23cc0e; }
+  main .row footer {
+    background-color: black;
+    color: white;
+    padding: 20px; }
